added get started button

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -17,5 +17,6 @@
     "continueYourJourny" : "واصل رحلتك معنا",
      "forgotPass" : "نسيت كلمة المرور؟",
      "rememberMe" : "تذكرني",
-     "dontHaveAccount" : "ليس لديك حساب؟"
+     "dontHaveAccount" : "ليس لديك حساب؟",
+     "getStarted" : "ابدأ الأن "
 }
