--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,6 +17,7 @@
     "continueYourJourny" : "Continue your journey with us",
      "forgotPass" : "Forget Password?",
      "rememberMe" : "Remember me",
-     "dontHaveAccount" : "Don’t have an account?"
+     "dontHaveAccount" : "Don’t have an account?",
+     "getStarted" : "Get Started"
 
 }
