finished language toggle

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,5 +1,5 @@
 {
-    "logo" : "بابروس",
+    "logo" : "Papyros",
     "gettingStarted" : "ابدأ الأن",
     "createAccount" : "أنشئ حسابك لبدء رحلتك",
     "firstName" : "الاسم الأول",
