modified failure class

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,5 @@
 {
-    "logo" : "Papyros",
+    "logo" : "Papyrus",
     "gettingStarted" : "Getting Started",
     "createAccount" : "Create your account to start your journey",
     "firstName" : "first name",
