added more keys to local

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -21,7 +21,8 @@
      "getStarted" : "Get Started",
      "phone" : "phone",
      "OTP"   : "OTP",
-     "sendOTP" : "send OTP"
+     "sendOTP" : "send OTP",
+     "editProfile" : "Edit profile"
 
 
 }
