--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -21,5 +21,13 @@
      "getStarted" : "ابدأ الأن ",
      "phone" : "موبايل",
      "OTP"   : "رقم المتغير",
-     "sendOTP"   : "ارسال الرقم المتغير "
+     "sendOTP"   : "ارسال الرقم المتغير ",
+     "editProfile" : "تعديل الملف الشخصي",
+     "Name": "الاسم",
+     "Bio" : "النبذة التعريفية",
+     "Location" : "الموقع الجغرافي",
+     "Gender" : "النوع",
+     "Birth date" : "تاريخ الميلاد",
+     "Edit" : "تعديل",
+     "Account Settings" : "إعدادات الحساب"
 }
