statred presentation layer and created profile management view and body

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -23,11 +23,12 @@
      "OTP"   : "رقم المتغير",
      "sendOTP"   : "ارسال الرقم المتغير ",
      "editProfile" : "تعديل الملف الشخصي",
-     "Name": "الاسم",
-     "Bio" : "النبذة التعريفية",
-     "Location" : "الموقع الجغرافي",
-     "Gender" : "النوع",
-     "Birth date" : "تاريخ الميلاد",
-     "Edit" : "تعديل",
-     "Account Settings" : "إعدادات الحساب"
+     "save" : "حفظ",
+     "name": "الاسم",
+     "bio" : "النبذة التعريفية",
+     "location" : "الموقع الجغرافي",
+     "gender" : "النوع",
+     "birth date" : "تاريخ الميلاد",
+     "edit" : "تعديل",
+     "account Settings" : "إعدادات الحساب"
 }
