finished edit profile birth date

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -28,7 +28,7 @@
      "bio" : "النبذة التعريفية",
      "location" : "الموقع الجغرافي",
      "gender" : "النوع",
-     "birth date" : "تاريخ الميلاد",
+     "birthDate" : "تاريخ الميلاد",
      "edit" : "تعديل",
      "account Settings" : "إعدادات الحساب"
 }
