--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -6,7 +6,7 @@
     "lastName" : "اسم العائلة",
     "yourEmail" : "البريد الإلكتروني",
     "yourPassword" : "كلمة المرور",
-    "confirmPassword" : "تأكيد كلمة المرورتأكيد كلمة المرور",
+    "confirmPassword" : "تأكيد كلمة المرور",
     "agreement" : "بإنشاء حسابك، توافق على",
     "conditions" :" الشروط والأحكام",
     "register" : "تسجيل",
