finished the initial state of chat bot

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -30,5 +30,7 @@
      "gender" : "النوع",
      "birthDate" : "تاريخ الميلاد",
      "edit" : "تعديل",
-     "accountSettings" : "إعدادات الحساب"
+     "accountSettings" : "إعدادات الحساب",
+     "hello" : "مرحبا",
+     "chatBotGreetings" : " كيف يمكنني مساعدتك اليوم؟"
 }
